add solution to point 1 (structure), 2 (search) and 3 (favorites).

--- a/src/html/partials/favorites.html
+++ b/src/html/partials/favorites.html
@@ -1,8 +1,7 @@
 <section class="favorites">
-    <h2 class="favorites__subtitle">Series favoritas</h2>
-    <article class="favorites__card">
-        <img class="favorites__card--img" src="#" alt="caratula de la serie" />
-        <h3 class="favorites__card--title"></h3>
-        <button class="favorites__card--esc"></button>
-    </article>
+    <h2 class="favorites__subtitle">Series Favoritas</h2>
+    <div class="favorites__container js-favouriteContainer">
+        <p class="favorites__container--text">Aún no tienes ningún favorito
+            añadido.</p>
+    </div>
 </section>
