--- a/src/scss/layout/_partial_main.scss
+++ b/src/scss/layout/_partial_main.scss
@@ -3,3 +3,8 @@
   padding: 30px;
   font-family: 'Roboto', sans-serif;
 }
+.container_main {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+}
