--- a/src/html/partials/finder.html
+++ b/src/html/partials/finder.html
@@ -1,9 +1,10 @@
 <section class="finder">
     <h1 class="finder__title">Buscador de series Anime</h1>
     <form class="finder__form">
-        <input class="finder__form--input" type="text" placeholder="Buscar..."
-            name="search" />
-        <input class="finder__form--btn" type="submit" value="Buscar" />
-        <input class="finder__form--btn" type="reset" value="Reset" />
+        <input class="finder__form--input js-input" type="text"
+            placeholder="Buscar..." name="search" />
+        <input class="finder__form--btn js-search" type="submit"
+            value="Buscar" />
+        <input class="finder__form--btn js-reset" type="reset" value="Reset" />
     </form>
 </section>
