--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,3 +1,5 @@
 <include src="./finder.html"></include>
-<include src="./favorites.html"></include>
-<include src="./results.html"></include>
+<div class="container_main">
+    <include src="./favorites.html"></include>
+    <include src="./results.html"></include>
+</div>
