--- a/src/scss/layout/_favorites.scss
+++ b/src/scss/layout/_favorites.scss
@@ -1,12 +1,53 @@
 .favorites {
+  height: 100%;
+  border: 4px solid pink;
+  border-radius: 5px;
+  margin-right: 10px;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  min-width: 350px;
   &__subtitle {
+    font-weight: 500;
+    text-align: center;
+    background-color: pink;
+    padding: 10px;
   }
-  &__card {
-    &--img {
+  &__container {
+    text-align: center;
+    &--text {
+      margin-top: 20px;
+      color: white;
     }
-    &--title {
-    }
-    &--esc {
+    &--card {
+      padding: 10px 20px 10px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      & .img {
+        height: 150px;
+        width: 100px;
+      }
+      & .title {
+        color: pink;
+        margin: 15px;
+        max-width: 120px;
+      }
+      & .esc {
+        height: 30px;
+        width: 30px;
+        border-radius: 50%;
+        border: 2px solid pink;
+        background-color: pink;
+        & .icon {
+          font-size: 20px;
+        }
+        &:hover {
+          background-color: black;
+          & .icon {
+            color: pink;
+          }
+        }
+      }
     }
   }
 }
