add localStorage and BONUS

--- a/src/html/partials/favorites.html
+++ b/src/html/partials/favorites.html
@@ -1,5 +1,9 @@
 <section class="favorites">
-    <h2 class="favorites__subtitle">Series Favoritas</h2>
+    <div class="favorites__subgroup">
+        <h2 class="favorites__subgroup--subtitle">Series Favoritas</h2>
+        <button class="favorites__subgroup--btn js-resetFavorites"><i
+                class="bin fas fa-trash-alt"></i></button>
+    </div>
     <div class="favorites__container js-favouriteContainer">
         <p class="favorites__container--text">Aún no tienes ningún favorito
             añadido.</p>
