--- a/src/html/partials/favorites.html
+++ b/src/html/partials/favorites.html
@@ -1,7 +1,7 @@
 <section class="favorites">
     <div class="favorites__subgroup">
         <h2 class="favorites__subgroup--subtitle">Series Favoritas</h2>
-        <button class="favorites__subgroup--btn js-resetFavorites"><i
+        <button class="favorites__subgroup--btn hidden js-resetFavorites"><i
                 class="bin fas fa-trash-alt"></i></button>
     </div>
     <div class="favorites__container js-favouriteContainer">
