--- a/src/html/partials/finder.html
+++ b/src/html/partials/finder.html
@@ -1,4 +1,5 @@
 <section class="finder">
+    <img class="finder__img" src="./assets/images/logo.svg" alt="" />
     <h1 class="finder__title">Buscador de series Anime</h1>
     <form class="finder__form">
         <input class="finder__form--input js-input" type="text"
