--- a/src/scss/layout/_finder.scss
+++ b/src/scss/layout/_finder.scss
@@ -1,33 +1,47 @@
 .finder {
   margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &__img {
+    height: 200px;
+  }
   &__title {
     color: rgb(88, 225, 223);
-    font-size: 35px;
+    font-family: 'Shizuru', cursive;
+    font-size: 40px;
+    margin-bottom: 20px;
   }
   &__form {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
     &--input {
-      height: 40px;
+      height: 50px;
       width: 500px;
-      border: 2px solid rgb(88, 225, 223);
+      border: none;
       border-radius: 5px;
+      border: 2px solid rgb(88, 225, 223);
       background-color: black;
       color: white;
       font-size: 16px;
       padding-left: 15px;
-      margin-top: 30px;
-      margin-bottom: 30px;
     }
     &--btn {
-      height: 30px;
+      height: 40px;
       width: 100px;
-      border-radius: 5px;
-      background-color: rgb(88, 225, 223);
+      border-radius: 30px;
+      background-color: rgba(88, 225, 223, 0);
       border: 2px solid rgb(88, 225, 223);
-      color: white;
+      color: rgb(88, 225, 223);
+      font-size: 16px;
       font-weight: bold;
       margin-left: 20px;
       &:hover {
-        background-color: black;
+        background-color: rgb(48, 47, 47);
+        transform: scale(1.05);
+        transition: background-color 0.7s ease, transform 0.2s ease;
       }
     }
   }
