--- a/src/scss/layout/_finder.scss
+++ b/src/scss/layout/_finder.scss
@@ -3,11 +3,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 30px;
+  background-image: linear-gradient(to bottom, #000000a5 0%, #000000 100%),
+    url('../images/hero.png');
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-bottom: 2px solid gray;
   &__img {
     height: 200px;
   }
   &__title {
-    color: rgb(88, 225, 223);
+    color: rgb(255, 255, 255);
     font-family: 'Shizuru', cursive;
     font-size: 40px;
     margin-bottom: 20px;
@@ -21,9 +28,9 @@
       height: 50px;
       width: 500px;
       border: none;
-      border-radius: 5px;
-      border: 2px solid rgb(88, 225, 223);
-      background-color: black;
+      border-radius: 15px;
+      border: 2px solid white;
+      background-color: rgb(21, 21, 21);
       color: white;
       font-size: 16px;
       padding-left: 15px;
@@ -33,13 +40,13 @@
       width: 100px;
       border-radius: 30px;
       background-color: rgba(88, 225, 223, 0);
-      border: 2px solid rgb(88, 225, 223);
-      color: rgb(88, 225, 223);
+      border: 2px solid white;
+      color: white;
       font-size: 16px;
       font-weight: bold;
       margin-left: 20px;
       &:hover {
-        background-color: rgb(48, 47, 47);
+        background-color: rgb(29, 29, 29);
         transform: scale(1.05);
         transition: background-color 0.7s ease, transform 0.2s ease;
       }
