--- a/src/scss/layout/_results.scss
+++ b/src/scss/layout/_results.scss
@@ -6,6 +6,7 @@
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   min-width: 350px;
+  margin-right: 30px;
   &__subtitle {
     font-weight: 500;
     text-align: center;
@@ -17,6 +18,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    list-style: none;
     &--text {
       color: white;
     }
