--- a/src/html/partials/results.html
+++ b/src/html/partials/results.html
@@ -1,5 +1,7 @@
 <section class="results">
-    <h2 class="results__subtitle">Resultados</h2>
+    <div class="results__title">
+        <h2 class="results__title--subtitle">Resultados</h2>
+    </div>
     <ul class="results__container js-cardContainer">
     </ul>
 </section>
