--- a/src/scss/layout/_favorites.scss
+++ b/src/scss/layout/_favorites.scss
@@ -1,39 +1,34 @@
 .favorites {
-  height: 100%;
-  border: 4px solid pink;
-  border-radius: 5px;
-  margin-right: 10px;
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+  height: 100vh;
+  background-color: rgb(38, 37, 37);
+  width: 30vw;
   min-width: 350px;
-  margin-left: 30px;
+  padding: 10px;
 
   &__subgroup {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    background-color: pink;
     width: 100%;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.31);
     &--subtitle {
-      font-weight: 500;
+      padding-bottom: 10px;
+      font-weight: normal;
       text-align: center;
-      padding: 10px;
+      color: white;
     }
   }
   &__container {
     list-style: none;
     text-align: center;
-    padding-top: 10px;
+    overflow: scroll;
     &--text {
       margin-top: 10px;
       color: white;
     }
     &--card {
       padding: 20px 20px 10px 20px;
-      margin-left: 10px;
-      margin-right: 10px;
       border-bottom: 1px solid rgba(128, 128, 128, 0.31);
-      border-top: 1px solid rgba(128, 128, 128, 0.31);
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -45,7 +40,7 @@
         width: 100px;
       }
       & .title {
-        color: pink;
+        color: white;
         margin: 15px;
         max-width: 120px;
       }
@@ -53,15 +48,15 @@
         height: 30px;
         width: 30px;
         border-radius: 50%;
-        border: 2px solid pink;
-        background-color: pink;
+        border: 2px solid white;
+        background-color: white;
         & .icon {
           font-size: 20px;
         }
         &:hover {
           background-color: black;
           & .icon {
-            color: pink;
+            color: white;
           }
         }
       }
@@ -76,8 +71,8 @@
       width: 200px;
       border-radius: 30px;
       background-color: rgba(88, 225, 223, 0);
-      border: 2px solid pink;
-      color: pink;
+      border: 2px solid white;
+      color: white;
       font-size: 16px;
       font-weight: bold;
       margin: 20px;
