--- a/src/scss/layout/_results.scss
+++ b/src/scss/layout/_results.scss
@@ -1,17 +1,16 @@
 .results {
-  height: 100%;
-  border: 4px solid rgb(218, 217, 217);
-  border-radius: 5px;
-  margin-left: 10px;
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
+  height: 100vh;
+  width: 70vw;
   min-width: 350px;
-  margin-right: 30px;
-  &__subtitle {
-    font-weight: 500;
-    text-align: center;
-    background-color: rgb(218, 217, 217);
-    padding: 10px;
+  &__title {
+    border-bottom: 1px solid rgb(88, 225, 223);
+    &--subtitle {
+      font-weight: normal;
+      text-align: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      color: rgb(88, 225, 223);
+    }
   }
   &__container {
     padding: 25px;
