--- a/src/scss/layout/_partial_main.scss
+++ b/src/scss/layout/_partial_main.scss
@@ -3,8 +3,6 @@
   font-family: 'Roboto', sans-serif;
 }
 .container_main {
-  height: 100vh;
-  @media (min-width: 768px) {
-    display: flex;
-  }
+  display: flex;
+  flex-direction: row;
 }
