--- a/src/scss/layout/_favorites.scss
+++ b/src/scss/layout/_favorites.scss
@@ -3,7 +3,7 @@
   width: 30vw;
   min-width: 350px;
   padding: 10px;
-
+  min-height: calc(100vh - 474px);
   &__subgroup {
     display: flex;
     justify-content: center;
@@ -23,7 +23,7 @@
     overflow: scroll;
     &--text {
       margin-top: 10px;
-      color: white;
+      color: gray;
     }
     &--card {
       padding: 20px 20px 10px 20px;
