--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'core/variables';
 @import 'core/reset';
 @import 'layout/partial_main';
+@import 'layout/footer';
 @import 'layout/favorites';
 @import 'layout/finder';
 @import 'layout/results';
